--- a/inventory/group_vars/onadata/vars.yml
+++ b/inventory/group_vars/onadata/vars.yml
@@ -2,7 +2,7 @@
 # Onadata General
 onadata_django_secret_key: "somesecret"
 onadata_version: "v2.0.11"
-onadata_domain: "example.com"
+onadata_domain: "wfp-training-onadata.onalabs.org"
 onadata_email_admins:
   - name: "Ona Data"
     email: "admin@example.com"
