--- a/inventory/host_vars/api-host0/vars.yml
+++ b/inventory/host_vars/api-host0/vars.yml
@@ -1,5 +1,5 @@
 ---
 ansible_ssh_user: "ubuntu"
-ansible_ssh_host: "{{ example_api_host_0 }}"
+ansible_ssh_host: "34.244.80.204"
 
 onadata_wsgi_http: "{{ example_api_host_0 }}:{{ onadata_wsgi_bind_port }}"
