--- a/inventory/group_vars/onadata/vars.yml
+++ b/inventory/group_vars/onadata/vars.yml
@@ -1,6 +1,6 @@
 ---
 # Onadata General
-onadata_django_secret_key: "somesecret"
+onadata_django_secret_key: "{{ vault_onadata_django_secret_key }}"
 onadata_version: "v2.0.11"
 onadata_domain: "wfp-training-onadata.onalabs.org"
 onadata_email_admins:
